// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderType: CASCADER > Modifying the operatorStyle from tags to none 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "empty",
          "property": "cascader02",
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: CASCADER > operator: "style=none" 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "empty",
          "property": "cascader02",
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: CASCADER > operator: "style=noop" && params: ["multiple = false"] && value is not empty 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "equal",
          "property": "cascader01",
          "value": "any",
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: CASCADER > operator: "style=noop" && params: ["multiple = true"] && value is not empty 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "equal",
          "property": "cascader02",
          "value": [
            "any",
            "name",
          ],
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;
